--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-pdf/renderer": "^2.0.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.35.1",
@@ -32,6 +33,7 @@
     "css-loader": "^5.2.2",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.3.1",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^7.1.1",
     "ts-loader": "^9.0.0",
